# auth0-appsync-custom-authorizer

./: .env.sample  .eslintrc.js  .gitignore  .prettierignore  .prettierrc  Cargo.toml  README.md  cdk.json  codegen.yml  package.json  tsconfig.json
fn/appsync/: Cargo.toml
fn/appsync/src/: errors.rs  main.rs
fn/authorizer/: Cargo.toml
fn/authorizer/src/: main.rs  types.rs  utils.rs  validation.rs
fn/helpers/: Cargo.toml
fn/helpers/src/: mocks.rs
functions/appsync/: README.md  index.ts  package.json
functions/authorizer/: getToken.ts  index.ts  package.json
gql/: Cargo.toml  events_schema.graphql  schema.graphql
gql/src/: main.rs
graphql/: graphql.ts  schema.graphql
lib/: appsync-stack.ts  config.ts  development-template-stack.ts
lib/resolvers/: eventGet.ts
models/events/: Cargo.toml
models/events/src/: model.rs
models/starwars/: Cargo.toml
models/starwars/src/: lib.rs
test/: development-template.test.ts
