[package]
name = "appsync"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = "4.0.13"
lambda_runtime = "0.6.1"
serde = "1.0.136"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

events = { path = "../../models/events" }
serde_json = "1.0.85"
http = "0.2.8"
thiserror = "1.0.36"
